updates to jre11 compatible build tech, tested with jdk17. biggest changes were related to soap stacks all sha1 based hashes moved to sha256 digital signature applet has been removed due to no path forward with the jre9+ api changes dependencies updated across the board war will NOT start in tomcat9 with jre17 with the sun jax libraries causing some kind of reflection issue