@@ -123,7 +123,7 @@ esac
 
 
 # begin custom juddi settings
-JAVA_OPTS="$JAVA_OPTS -Xms1024m -Xmx1024m -XX:MaxPermSize=512m -XX:PermSize=256M"
+JAVA_OPTS="$JAVA_OPTS -Xms1024m -Xmx1024m "
 JAVA_OPTS="$JAVA_OPTS -Djavax.net.ssl.trustStore=truststore.jks -Djavax.net.ssl.trustStorePassword=password -Djavax.net.ssl.keyStore=../conf/keystore.jks -Djavax.net.ssl.keyStorePassword=password"
 # end custom juddi settings
 
